# mspec

./: .gitignore  BROWSER2.md  MTECH.md  MTEMPLATE.md  README.md  README_NEW.md  TODO.md  build.sh  build_test.py  custom_types.py  hello-world-page.json  line_count.sh  pyproject.toml  run_tests.py  test.sh
.github/: copilot-instructions.md
browser2/c/: build.sh  main.py
browser2/go/: build.sh  lingo.go  main.py
browser2/js/: TODO.MD  package-lock.json  package.json  playwright.config.js  server.py
docs/: BROWSER2.md  CODE_STYLE.md  LINGO_EXPRESSIONS.md  LINGO_FUNCTIONS.md  LINGO_MAPP_SPEC.md  LINGO_RICH_TEXT_SPEC.md  LINGO_SCRIPTING_AND_PAGE_SPEC.md  LINGO_SPEC.md  MAPP_SPEC.md  MTEMPLATE_LEGACY.md  MTEMPLATE_SPEC.md  MTEMPLATE_SYNTAX.md  social-thread-reaction-count-plan.md  ticket-main-post-reaction-count-updates.md  ticket-reply-reaction-count-updates.md
docs/sprint/: README.md  TICKET_02_db_lingo_functions.md  (+7 more)
lingo/: README.md  TODO.md
lingo/interpreters/hs/: README.md  cabal.project.freeze  hie.yaml  lingo.sh  lingolib.cabal
lingo/interpreters/hs/app/: Main.hs
lingo/interpreters/hs/src/: Lingolib.hs
spec/: cms.yaml  core.yaml  markup.py  my-sample-store.yaml  sample.yaml  test-gen-2.yaml  test-gen.yaml  unit-test.yaml
templates/: dev.yaml  renamer.py
templates/_deprecated/py/: dev.yaml  pyproject.toml
templates/_deprecated/py/src/core/: __init__.py  client.py  db.py  server.py
templates/_deprecated/py/src/template_module/: __main__.py  gui.py
templates/_deprecated/py/src/template_module/multi_model/: __init__.py
templates/_deprecated/py/src/template_module/single_model/: __init__.py  gui.py  model.py  server.py
templates/_deprecated/py/tests/template_module/: perf_single_model.py  test_single_model.py
templates/py/: README.md  dev.yaml  pyproject.toml  server.sh
templates/py/src/core/: __init__.py  __main__.py  auth.py  client.py  db.py  exceptions.py  gui.py  models.py  server.py  types.py  util.py
templates/py/src/msample/: __init__.py  __main__.py  client.py  data.py  db.py  server.py
templates/py/src/sample/: __init__.py  __main__.py  client.py  db.py  server.py
templates/py/src/sample/sample_item/: __init__.py  client.py  db.py  server.py
templates/py/src/sample_module/: __init__.py  __main__.py  gui.py
templates/py/src/sample_module/example_item/: __init__.py  client.py  db.py  gui.py  model.py  server.py
templates/py/src/template_module/: gui.py
templates/py/src/template_module/multi_model/: __init__.py  client.py  db.py  gui.py  model.py  server.py
templates/py/src/template_module/single_model/: __init__.py  client.py  db.py  gui.py  model.py  server.py
templates/py/src/test_module/: __main__.py  gui.py
templates/py/src/test_module/multi_model/: __init__.py  client.py  db.py  gui.py  model.py  server.py
templates/py/src/test_module/single_model/: client.py  db.py  gui.py  server.py
templates/py/src/test_module/test_model/: client.py  db.py  gui.py  model.py  server.py
templates/py/srv/: index.html
templates/py/srv/msample/: index.html
templates/py/srv/msample/sample_item/: id.html  index.html  index.js
templates/py/tests/: test_sample.py
templates/py/tests/core/: test_auth.py  test_models.py
templates/py/tests/sample/: test_sample_item.py
templates/py/tests/sample_module/: perf_example_item.py  test_example_item.py
templates/py/tests/template_module/: perf_multi_model.py  test_multi_model.py  test_single_model.py
templates/py/tests/test_module/: perf_multi_model.py  perf_single_model.py  perf_test_model.py  test_multi_model.py  test_single_model.py  test_test_model.py
tests/: __init__.py  _disabled_test_app_generator.py  core.py  test_app_generator.py  test_cli.py  test_lingo.py  test_mapp_field_limits.py  test_markup.py  test_mspec.py  test_mtemplate.py  test_mtester.py  test_seed.py  test_tester.py
(+398 files in other folders)
