# vars :: {"mspec":"project.snake_case", "Brad Corlett":"author_name", "brad.corlett@gmail.com":"author_email"}

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'mspec'
version = '0.0.1'
authors = [
  { name='Brad Corlett', email='brad.corlett@gmail.com' },
]
description = 'the medium protocol and stuff'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
    'pymongo == 4.9.1',
    'uwsgi == 2.0.27'
]
