# vars :: {"msample":"project.name.snake_case", "Brad Corlett":"project.author.name", "brad.corlett@gmail.com":"project.author.email", "msample sample project": "project.description"}
[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'msample'
version = '0.0.1'
authors = [
  { name='Brad Corlett', email='brad.corlett@gmail.com' },
]
description = 'msample sample project'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
    'uwsgi == 2.0.27',
    'passlib[bcrypt]',
    'python-jose[cryptography]'
]
