cabal-version:      2.4
name:               lingolib
version:            0.1.0.0
build-type:         Simple

library
  exposed-modules:    Lingolib
  hs-source-dirs:     src
  default-language:   Haskell2010

executable lingolib
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base >=4.14 && <5, lingolib
  default-language:   Haskell2010
